tests/idris2/coverage/impossible003/expected
1/1: Building Main (Main.idr)
Warning: Main:2:5--2:6:Cannot match on a partially applied constructor: Prelude.Types.S

Main:2:5--2:6
 1 | foo : Nat -> Nat
 2 | foo S impossible
         ^

Error: foo is not covering.

Main:1:1--1:17
 1 | foo : Nat -> Nat
     ^^^^^^^^^^^^^^^^

Missing cases:
    foo (S _)

